--- a/styles/uvod.css
+++ b/styles/uvod.css
@@ -1,5 +1,5 @@
 body {
-    background-color: white;
+    background-color: blueviolet;
     /*
     margin: 0;
     padding: 0;
@@ -11,9 +11,14 @@ body {
     /*font-weight: 400;*/
     font-style: normal;
 }
-
+<img src=
 .bungee-tint {
     font-family: "Bungee Tint", sans-serif;
     /*font-weight: 400;*/
     font-style: normal;
+}
+h1 class bebas-neue
+h1{
+    color:blue;
+    font-size: 5em;
 }
